<resources>
    <string name="app_name">ClimbIt</string>
    <string name="password">Contrasenya</string>
    <string name="user">Usuari</string>
    <string name="crea_el_teu_usuari_aqu">Crea el teu usuari aquí</string>
    <string name="sign_up">Entrar</string>
    <string name="formulari_de_registre">Formulari de registre</string>
    <string name="nom">Nom:</string>
    <string name="contrasenya">Contrasenya:</string>
    <string name="username">Username:</string>
    <string name="cognom">Cognom:</string>
    <string name="registrar">Registrar</string>
    <string name="benvingut">Benvingut!!</string>
    <string name="usertext" translatable="false">usertext</string>
    <string name="crea_el_teu_usuari_aqui">Crea el teu usuari aqui</string>
    <string name="crea_el_teu_usuari">Crea el teu usuari</string>
    <string name="title_activity_principal">principal</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">User</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inici</string>
    <string name="menu_gallery">Els meus events</string>
    <string name="menu_slideshow">Crear Event</string>
    <string name="menu_share">Tancar sessió</string>
    <string name="menu_send">El meu perfil</string>
    <string name="sexe">Sexe:</string>
    <string name="home">Home</string>
    <string name="dona">Dona</string>
    <string name="frase_que_mes_et_defineix">Frase que mes et defineix:</string>
    <string name="ets_introvertit">Ets introvertit?</string>
    <string name="et_consideres_montanyista">Et consideres montanyista?</string>
    <string name="accepto_l_us_de_les_meves_dades">Accepto l\'us de les meves dades</string>
    <string name="title_placeholder">Esports</string>
    <string name="news_placeholder">Ruta</string>
    <string name="sports_info_placeholder" translatable="false">sports</string>

    <array name="sports_images">
        <item>@drawable/aiguestortes</item>
        <item>@drawable/matagalls</item>
        <item>@drawable/cavallsvent</item>
        <item>@drawable/camimonjos</item>
        <item>@drawable/camironda</item>
        <item>@drawable/gorgs</item>
        <item>@drawable/penyesaltes</item>
        <item>@drawable/santmaurici</item>
        <item>@drawable/santfeliuguixols</item>
        <item>@drawable/montagutpuigformosa</item>
        <item>@drawable/prades</item>
        <item>@drawable/piscinescampdevanol</item>
        <item>@drawable/empedratmorou</item>
    </array>

    <string-array name="sports_info">
        <item>Aigues Tortes</item>
        <item>Matagalls</item>
        <item>Cavalls de Vent</item>
        <item>Cami dels Monjos</item>
        <item>Cami de Ronda</item>
        <item>Gorgs</item>
        <item>Penyes Altes</item>
        <item>Sant Maurici</item>
        <item>Sant Feliu dels Guixols</item>
        <item>Montagut Puig Formosa</item>
        <item>Prades</item>
        <item>Piscines de Campdevanol</item>
        <item>Empedrat de Morou</item>
    </string-array>



</resources>