<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:accessibilityLiveRegion="polite"
    >


    <TextView
        android:id="@+id/titol"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/titol"
        android:text="@string/formulari_de_registre"
        android:textSize="36sp"
        android:fontFamily="sans-serif-smallcaps"
        android:accessibilityLiveRegion="polite"
        android:minWidth="48dp"
        android:minHeight="48dp"
        />

    <TextView
        android:focusable="true"
        android:id="@+id/tv_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:labelFor="@id/tv_nom"
        android:text="@string/nom"
        android:textSize="24sp"
        android:accessibilityLiveRegion="polite"
        android:minWidth="48dp"
        android:minHeight="48dp"
        />

    <EditText
        android:focusable="true"
        android:id="@+id/txt_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/txt_nom"
        android:fontFamily="sans-serif-smallcaps"
        android:accessibilityLiveRegion="polite"
        />

    <TextView
        android:focusable="true"
        android:id="@+id/tv_cognom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/tv_cognom"
        android:text="@string/cognom"
        android:textSize="24sp"
        android:fontFamily="sans-serif-smallcaps"
        android:accessibilityLiveRegion="polite"
        android:minWidth="48dp"
        android:minHeight="48dp"
        />

    <EditText
        android:focusable="true"
        android:id="@+id/txt_cognom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/txt_cognom"
        android:importantForAutofill="no"
        android:fontFamily="sans-serif-smallcaps"
        android:accessibilityLiveRegion="polite"
        />

    <TextView
        android:focusable="true"
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/tv_username"
        android:text="@string/username"
        android:textSize="24sp"
        android:fontFamily="sans-serif-smallcaps"
        android:accessibilityLiveRegion="polite"
        android:minWidth="48dp"
        android:minHeight="48dp"
        />

    <EditText
        android:focusable="true"
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/txt_username"
        android:importantForAutofill="no"
        android:fontFamily="sans-serif-smallcaps"
        android:accessibilityLiveRegion="polite"
        />

    <TextView
        android:focusable="true"
        android:id="@+id/tv_contrasenya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/tv_contrasenya"
        android:text="@string/contrasenya"
        android:textSize="24sp"
        android:fontFamily="sans-serif-smallcaps"
        android:accessibilityLiveRegion="polite"
        android:minWidth="48dp"
        android:minHeight="48dp"
        />

    <EditText
        android:focusable="true"
        android:id="@+id/txt_contrasenya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:labelFor="@id/txt_contrasenya"
        android:importantForAutofill="no"
        android:fontFamily="sans-serif-smallcaps"
        android:accessibilityLiveRegion="polite"
        />

    <TextView
        android:focusable="true"
        android:id="@+id/tv_sexe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexe"
        android:textSize="24sp"
        android:fontFamily="sans-serif-smallcaps"
        android:accessibilityLiveRegion="polite"
        android:minWidth="48dp"
        android:minHeight="48dp"
        />

    <RadioButton
        android:focusable="true"
        android:id="@+id/rb_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:accessibilityLiveRegion="polite"
        android:minWidth="48dp"
        android:minHeight="48dp"
        />

    <RadioButton
        android:focusable="true"
        android:id="@+id/rb_dona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dona"
        android:fontFamily="sans-serif-smallcaps"
        android:accessibilityLiveRegion="polite"
        android:minWidth="48dp"
        android:minHeight="48dp"
        />

    <TextView
        android:focusable="true"
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frase_que_mes_et_defineix"
        android:textSize="24sp"
        android:fontFamily="sans-serif-smallcaps"
        android:accessibilityLiveRegion="polite"
        android:minWidth="48dp"
        android:minHeight="48dp"
        />

    <Spinner
        android:focusable="true"
        android:id="@+id/sp_frase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:accessibilityLiveRegion="polite"
        />

    <TextView
        android:focusable="true"
        android:id="@+id/tv_introvertit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ets_introvertit"
        android:textSize="24sp"
        android:fontFamily="sans-serif-smallcaps"
        android:accessibilityLiveRegion="polite"
        android:minWidth="48dp"
        android:minHeight="48dp"
        />

    <SeekBar
        android:focusable="true"
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:fontFamily="sans-serif-smallcaps"
        android:accessibilityLiveRegion="polite"
        android:minWidth="48dp"
        android:minHeight="48dp"
        />

    <Switch
        android:focusable="true"
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/et_consideres_montanyista"
        android:textSize="24sp"
        android:fontFamily="sans-serif-smallcaps"
        android:accessibilityLiveRegion="polite"
        android:minWidth="48dp"
        android:minHeight="48dp"
        />

    <CheckBox
        android:focusable="true"
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accepto_l_us_de_les_meves_dades"
        android:fontFamily="sans-serif-smallcaps"
        android:accessibilityLiveRegion="polite"
        android:minWidth="48dp"
        android:minHeight="48dp"
        />

    <Button
        android:focusable="true"
        android:id="@+id/btn_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="registrar"
        android:text="@string/registrar"
        android:fontFamily="sans-serif-smallcaps"
        android:accessibilityLiveRegion="polite"
        android:minWidth="48dp"
        android:minHeight="48dp"
        />

</LinearLayout>