<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.Shrine.TextInputLayout"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:accessibilityLiveRegion="polite"
    >

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="265dp"
        android:layout_height="173dp"
        android:layout_marginTop="16dp"
        android:accessibilityLiveRegion="polite"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/montanista2" />

    <EditText
        android:id="@+id/txt_Password"
        style="@style/Widget.Shrine.TextInputLayout"
        android:layout_width="172dp"
        android:layout_height="26dp"
        android:accessibilityLiveRegion="polite"
        android:autofillHints=""
        android:ems="10"
        android:focusable="true"
        android:fontFamily="sans-serif-smallcaps"
        android:inputType="textPassword"
        android:labelFor="@id/txt_Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txt_User"
        style="@style/Widget.Shrine.TextInputLayout"
        android:layout_width="172dp"
        android:layout_height="26dp"
        android:accessibilityLiveRegion="polite"
        android:ems="10"
        android:focusable="true"
        android:fontFamily="sans-serif-smallcaps"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/txt_User"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="52dp"
        android:layout_height="31dp"
        android:layout_marginTop="24dp"
        android:accessibilityLiveRegion="polite"
        android:focusable="true"
        android:fontFamily="sans-serif-smallcaps"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="84dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:accessibilityLiveRegion="polite"
        android:focusable="true"
        android:fontFamily="sans-serif-smallcaps"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_User" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:accessibilityLiveRegion="polite"
        android:focusable="true"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="login"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Password"
        app:layout_constraintVertical_bias="0.0" />

    <Button

        android:id="@+id/btn_registre"
        android:layout_width="128dp"
        android:layout_height="56dp"
        android:accessibilityLiveRegion="polite"
        android:focusable="true"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="formulariRegistre"
        android:text="@string/crea_el_teu_usuari"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup"
        app:layout_constraintVertical_bias="0.423" />

    <Button
        android:id="@+id/button_cat"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginTop="112dp"
        android:accessibilityLiveRegion="polite"
        android:background="@drawable/bottom_cat"
        android:clickable="false"
        android:focusable="auto"
        android:minWidth="45dp"
        android:minHeight="48dp"
        android:onClick="cambialCat"
        app:layout_constraintBottom_toBottomOf="@+id/button_es"
        app:layout_constraintStart_toEndOf="@+id/button_es"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_en"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginEnd="152dp"
        android:accessibilityLiveRegion="polite"
        android:background="@drawable/bottom_en"
        android:enabled="false"
        android:focusable="auto"
        android:minWidth="45dp"
        android:minHeight="45dp"
        android:onClick="cambialEn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toEndOf="@+id/btn_registre"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup"
        app:layout_constraintVertical_bias="0.416" />

    <Button
        android:id="@+id/button_es"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:accessibilityLiveRegion="polite"
        android:background="@drawable/bottom_es"
        android:enabled="false"
        android:focusable="auto"
        android:minWidth="45dp"
        android:minHeight="45dp"
        android:onClick="cambialEsp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_en"
        app:layout_constraintTop_toTopOf="@+id/button_en"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>